# yolo-swin-convnext-baselines

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  train.py
data/: dataset.py  eurocity_to_coco.py  transforms.py
models/: __init__.py  backbones.py  fpn.py  yolo_head.py
utils/: box_ops.py  losses.py  metrics.py
